css has been changed

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
           </div>
           <div class="header--wrapper__leftImg">
             <figure>
-              <img src="./img/Carrot-Cake-Bundt-Cakes-Cover-1.webp" alt="" />
-              <img src="./img/Chocolate-Cake-for-Two-Cover.webp" alt="" />
-              <img src="./img/Wedding-cake-cupcakes-cover.webp" alt="" />
+              <a href="#"><img src="./img/Carrot-Cake-Bundt-Cakes-Cover-1.webp" alt="" /></a>
+              <a href="#"><img src="./img/Chocolate-Cake-for-Two-Cover.webp" alt="" /></a>
+              <a href="#"><img src="./img/Wedding-cake-cupcakes-cover.webp" alt="" /></a>
             </figure>
           </div>
         </div>
@@ -68,49 +68,50 @@
           <h3>Cakes & Sweets</h3>
           <div class="products--wrapper__img">
             <figure>
-              <img
-                src="./img/Blackberry-Earl-Grey-Cupcakes-Cover-1.webp"
-                alt=""
-              />
-              <img src="./img/Fully-loaded-carrot-cake-cover.webp" alt="" />
-              <img src="./img/Best-Brownies-Overhead-Multiples.webp" alt="" />
-              <img src="./img/Funfetti-Cupcake-Cover.webp" alt="" />
-              <img src="./img/Plum-Scone-Drizzle-1.webp" alt="" />
-              <img src="./img/Pumpkin-Bundt-Cake-on-Stand.webp" alt="" />
+              <a href="#">
+                <img
+                  src="./img/Blackberry-Earl-Grey-Cupcakes-Cover-1.webp"
+                  alt=""
+                />
+              </a>
+              <a href="#"><img src="./img/Fully-loaded-carrot-cake-cover.webp" alt="" /></a>
+              <a href="#"><img src="./img/Best-Brownies-Overhead-Multiples.webp" alt="" /></a>
+              <a href="#"><img src="./img/Funfetti-Cupcake-Cover.webp" alt="" /></a>
+              <a href="#"><img src="./img/Plum-Scone-Drizzle-1.webp" alt="" /></a>
+              <a href="#"><img src="./img/Pumpkin-Bundt-Cake-on-Stand.webp" alt="" /></a>
             </figure>
           </div>
         </div>
         <div class="aboutUs--wrapper">
+          <h3>About us</h3>
           <div class="aboutUs--contents__wrapper">
-            <div class="aboutUs--text">
-              <h3>About us</h3>
-              <p>
-                Help celebrate a special day or commemorate a significant
-                occasion with a sweet treat from N.Sweet Bakery. Where you are
-                searching for a special birthday cake. Or simply looking for a
-                sweet ending to an everyday meal.
-              </p>
-              <p>
-                N.Sweet is sure to have something freshly baked to suit your
-                mood. We are proud to offer a wide variety of freshly baked
-                goods daily. including gourmet cakes, cookies, pies,
-                cheesecakes, brownies and over 20 flavors of cupcakes that no
-                one can resist.
-              </p>
+              <div class="aboutUs--text">
+                <p>
+                  Help celebrate a special day or commemorate a significant
+                  occasion with a sweet treat from N.Sweet Bakery. Where you are
+                  searching for a special birthday cake. Or simply looking for a
+                  sweet ending to an everyday meal.
+                </p>
+                <p>
+                  N.Sweet is sure to have something freshly baked to suit your
+                  mood. We are proud to offer a wide variety of freshly baked
+                  goods daily. including gourmet cakes, cookies, pies,
+                  cheesecakes, brownies and over 20 flavors of cupcakes that no
+                  one can resist.
+                </p>
+              </div>
+              <figure>
+                <img src="./img/cookie.png" alt="" />
+              </figure>
             </div>
-            <figure>
-              <img src="./img/cookie.png" alt="" />
-            </figure>
-          </div>
         </div>
         <div class="bestSeller--wrapper">
           <div class="bestSeller--text">
             <h3>Best seller & Review</h3>
-            <!-- <h4>Whole catalog</h4> -->
           </div>
           <div class="bestSeller--img">
-            <figure>
-              <img src="./img/Banana-Bourbon-Coffee-Cake-Cover.webp" alt="" />
+            <figure class="bestSeller--firstImg">
+              <a href="#"><img src="./img/Banana-Bourbon-Coffee-Cake-Cover.webp" alt="" /></a>
               <figcaption>
                 “Peanut butter cookies are super cool. Come!”
                 <br />
@@ -118,7 +119,7 @@
               </figcaption>
             </figure>
             <!-- <figure>
-              <img src="./img/Best-Brownies-Overhead-Multiples.webp" alt="" />
+              <a href="#"><img src="./img/Best-Brownies-Overhead-Multiples.webp" alt="" /></a>
               <figcaption>
                 “Peanut butter cookies are super cool. Come!”
                 <br />
@@ -126,7 +127,7 @@
               </figcaption>
             </figure>
             <figure>
-              <img src="./img/Vanilla-Cardamom-Cake-Cover.webp" alt="" />
+              <a href="#"><img src="./img/Vanilla-Cardamom-Cake-Cover.webp" alt="" /></a>
               <figcaption>
                 “Peanut butter cookies are super cool. Come!”
                 <br />
@@ -165,20 +166,22 @@
         </div>
         <div class="sns--wrapper">
           <h3>@N.sweets</h3>
-          <div class="sns--img">
-            <div class="sns--img__top">
-              <img src="./img/sns01.png" alt="" />
-              <img src="./img/sns02.png" alt="" />
-              <img src="./img/sns03.png" alt="" />
-              <img src="./img/sns04.png" alt="" />
+          <a href="#">
+            <div class="sns--img">
+              <div class="sns--img__top">
+                <img src="./img/sns01.png" alt="" />
+                <img src="./img/sns02.png" alt="" />
+                <img src="./img/sns03.png" alt="" />
+                <img src="./img/sns04.png" alt="" />
+              </div>
+              <div class="sns--img__bottom">
+                <img src="./img/sns05.png" alt="" />
+                <img src="./img/sns06.png" alt="" />
+                <img src="./img/sns07.png" alt="" />
+                <img src="./img/sns08.png" alt="" />
+              </div>
             </div>
-            <div class="sns--img__bottom">
-              <img src="./img/sns05.png" alt="" />
-              <img src="./img/sns06.png" alt="" />
-              <img src="./img/sns07.png" alt="" />
-              <img src="./img/sns08.png" alt="" />
-            </div>
-          </div>
+          </a>
         </div>
         <div class="contact--wrapper">
           <h3>Contacts</h3>
