gsap has been midified

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                   </figcaption>
                 </figure>
                 <figure class="side-scroll-item">
-                  <a href="#"><img src="./img/Vanilla-Cardamom-Cake-Cover.webp" alt="" /></a>
+                  <a href="#"><img src="/img/New-Feat-Image-Cinnamon-Roll-Muffin.webp" alt="" /></a>
                   <figcaption>
                     “Peanut butter cookies are super cool. Come!”
                     <br />
