--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="/JS/main.js" defer></script>
+    <script src="./JS/main.js" defer></script>
   </head>
   <body>
     <nav class="nav-wrapper" id="nav-wrapper">
@@ -137,14 +137,14 @@
                     — Bruno (Google Reviews, July 2022)
                   </figcaption>
                 </figure>
-                <figure class="side-scroll-item">
-                  <a href="#"><img src="/img/New-Feat-Image-Cinnamon-Roll-Muffin.webp" alt="" /></a>
+                <!-- <figure class="side-scroll-item">
+                  <a href="#"><img src="./img/New-Feat-Image-Cinnamon-Roll-Muffin.webp" alt="" /></a>
                   <figcaption>
                     “Peanut butter cookies are super cool. Come!”
                     <br />
                     — Bruno (Google Reviews, July 2022)
                   </figcaption>
-                </figure>
+                </figure> -->
               </div>
             </div>
           </div>
